# rsi

./: .gitignore  CMakeLists.txt  README.md  README.org  hosts  makefile  rsi.config  rsi_test_client.py
include/: core.h  get_config.h  globals.h  native_implement_sysinfo.h  rsi_client.h  rsi_clients.h  rsi_server.h  sysinfo.h  tools.h  virt.h
src/: CMakeLists.txt  core.cpp  get_config.cpp  jsoncpp.cpp  main.cpp  native_implement_sysinfo.cpp  rsi_client.cpp  rsi_clients.cpp  rsi_server.cpp  sysinfo.cpp  tools.cpp  virt.cpp
